modification of the structure for C++

--- a/StreetCar/Shared/Makefile
+++ b/StreetCar/Shared/Makefile
@@ -1,6 +1,10 @@
 CXX = g++
 CXXFLAGS = -Wall -c -std=c++11
 
+
+Tile.o: Tile.cpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
 PlayTile.o: Pack.h PlayTile.h PlayTile.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
