modifié:         Makefile 	modifié:         PlayTile.cpp 	modifié:         PlayTile.h 	modifié:         PlayTravel.cpp 	modifié:         PlayTravel.h 	modifié:         PlayedTravel.cpp 	modifié:         PlayedTravel.h 	modifié:         StartTravel.cpp 	modifié:         StartTravel.h 	modifié:         StartedTravel.cpp 	modifié:         StartedTravel.h 	modifié:         StopTravel.cpp 	modifié:         StopTravel.h 	modifié:         StoppedTravel.cpp 	modifié:         StoppedTravel.h 	modifié:         Tile.cpp

--- a/StreetCar/Shared/Makefile
+++ b/StreetCar/Shared/Makefile
@@ -1,7 +1,7 @@
 CXX = g++
 CXXFLAGS = -Wall -c -std=c++11
 
-PlayTile.o: Pack.h PlayTile.h PlayTile.cpp
+PlayTile.o: PlayTile.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 Pack.o: Pack.h
