--- a/StreetCar/Shared/Makefile
+++ b/StreetCar/Shared/Makefile
@@ -1,7 +1,7 @@
 CXX = g++
 CXXFLAGS = -Wall -c -std=c++11
 
-All: Tile.o Square.o Board.o PlayTile.o Pack.o StartTravel.o PlayTravel.o StopTravel.o PlayTile.o PlayedTile.o PlayedTravel.o Clean
+All: Tile.o Square.o Board.o PlayTile.o Pack.o StartTravel.o PlayTravel.o StopTravel.o PlayTile.o PlayedTile.o PlayedTravel.o StartedTravel.o Clean
 
 Tile.o: Tile.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
@@ -34,6 +34,9 @@ PlayedTile.o: PlayedTile.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 PlayedTravel.o: PlayedTravel.cpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+StartedTravel.o: StartedTravel.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 Clean:
