--- a/StreetCar/Shared/Makefile
+++ b/StreetCar/Shared/Makefile
@@ -1,7 +1,7 @@
 CXX = g++
 CXXFLAGS = -Wall -c -std=c++11
 
-All: Tile.o Square.o Board.o Stop.o PlayTile.o Pack.o Pile.o Clean
+All: Tile.o Square.o Board.o Stop.o PlayTile.o Pack.o Pile.o Player.o Profile.o Clean
 
 Tile.o: Tile.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
@@ -22,6 +22,12 @@ PlayTile.o: Pack.h PlayTile.h PlayTile.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 Pack.o: Pack.h
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+Player.o: Player.cpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+Profile.o: Profile.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 Clean:
