add Clean for delete *.dep *.o ...

--- a/StreetCar/Shared/Makefile
+++ b/StreetCar/Shared/Makefile
@@ -1,7 +1,7 @@
 CXX = g++
 CXXFLAGS = -Wall -c -std=c++11
 
-All: PileTarget.o Card.o Tile.o Square.o Board.o Pack.o StartTravel.o PlayTravel.o StopTravel.o PlayTile.o PlayedTile.o PlayedTravel.o StartedTravel.o StoppedTravel.o Won.o PilePlayer.o PileWhenTravel.o Player.o Profile.o Pile.o Clean
+All: PileTarget.o Card.o Tile.o Square.o Board.o Pack.o StartTravel.o PlayTravel.o StopTravel.o PlayTile.o PlayedTile.o PlayedTravel.o StartedTravel.o StoppedTravel.o Won.o PilePlayer.o PileWhenTravel.o Player.o Profile.o Pile.o clean
 
 Pile.o: Pile.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
@@ -69,5 +69,8 @@ Player.o: Player.cpp
 Profile.o: Profile.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
-Clean:
+clean:
 	rm *.o
+
+Clean:
+	rm *.o *.dep ../Shared/*.o ../Shared/*.dep
