Ajout du test de la classe player

--- a/StreetCar/Shared/Test/Makefile
+++ b/StreetCar/Shared/Test/Makefile
@@ -1,12 +1,21 @@
 CXX = g++
 CXXFLAGS = -Wall -c -std=c++11
 
-all: Pile.o Square.o TestPile TestSquare
+all: Pile.o Tile.o Player.o Square.o Profile.o TestPile TestSquare TestPlayer
 
 Pile.o: ../Pile.cpp ../Pile.h
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
+Tile.o: ../Tile.cpp ../Tile.h
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
 Square.o: ../Square.cpp ../Square.h
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+Player.o: ../Player.cpp ../Player.h
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+Profile.o: ../Profile.cpp ../Profile.h
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 TestPile: TestPile.cpp Pile.o
@@ -14,6 +23,9 @@ TestPile: TestPile.cpp Pile.o
 
 TestSquare: TestSquare.cpp Square.o
 	g++ TestSquare.cpp Square.o -o TestSquare -Wall
+
+TestPlayer: TestPlayer.cpp Player.o Tile.o Profile.o Square.o
+	g++ TestPlayer.cpp Player.o Tile.o Profile.o Square.o -o TestPlayer -Wall
 	
 clean:
-	rm TestPile TestSquare *.o
+	rm TestPile TestSquare TestPlayer *.o
