modification dans le clean du makefile

--- a/StreetCar/Server/Makefile
+++ b/StreetCar/Server/Makefile
@@ -22,4 +22,4 @@ server: $(OBJ)
 #	$(CC) -c $< $(CFLAGS)
 
 clean:
-	rm *.o *.dep ../Shared/*.o ../Shared/*.dep
+	rm *.o *.dep ../Shared/*.o ../Shared/*.dep *.h.gch ../Shared/*.h.gch
