modification of the Makefile for C++

--- a/StreetCar/Computer/Makefile
+++ b/StreetCar/Computer/Makefile
@@ -1,8 +1,8 @@
 SDL_INCLUDE = -I/usr/local/include -I../Shared/
 LDFLAGS = $(LIB)  -I../Shared/ -Wall -pthread
 
-CC=g++
-CFLAGS=-Wall -c -std=c++11 $(SDL_INCLUDE)
+CXX=g++
+CXXFLAGS=-Wall -c -std=c++11 $(SDL_INCLUDE)
 SDL_INCLUDE = -I/usr/local/include -I../Shared/                                                              
 
 SOURCES=$(wildcard *.cpp) $(wildcard ../Shared/*.cpp)
@@ -11,15 +11,15 @@ OBJ=$(patsubst %.cpp, %.o, $(SOURCES))
 
 
 applicationComputer: $(OBJ)
-	$(CC) $(LDFLAGS) -o $@ $^
+	$(CXX) $(LDFLAGS) -o $@ $^
 
 -include $(DEPS)
 
 %.dep: %.cpp
-	$(CC) -MM $< >$@ $(CFLAGS)
+	$(CXX) -MM $< >$@ $(CXXFLAGS)
 
 #Tile.o:../Shared/Tile.cpp ../Shared/Tile.h
-#	$(CC) -c $< $(CFLAGS)
+#	$(CXX) -c $< $(CXXFLAGS)
 
 clean:
 	rm *.o *.dep ../Shared/*.o ../Shared/*.dep *.h.gch ../Shared/*.h.gch
