--- a/StreetCar/Server/Makefile
+++ b/StreetCar/Server/Makefile
@@ -1,7 +1,7 @@
 SDL_INCLUDE = -I/usr/local/include -I../Shared/
 LDFLAGS = $(LIB)  -I../Shared/ -Wall -pthread
 
-CC=g++ -g
+CC=clang++ -g
 CFLAGS=-Wall -c -std=c++11 $(SDL_INCLUDE)
 SDL_INCLUDE = -I/usr/local/include -I../Shared/                                                              
 
@@ -10,7 +10,7 @@ DEPS=$(patsubst %.cpp, %.dep, $(SOURCES))
 OBJ=$(patsubst %.cpp, %.o, $(SOURCES))
 
 
-server: $(OBJ) ../Shared/Pile.h
+server: $(OBJ)
 	$(CC) $(LDFLAGS) -o $@ $^
 
 -include $(DEPS)
