--- a/StreetCar/Computer/Test/Makefile
+++ b/StreetCar/Computer/Test/Makefile
@@ -1,9 +1,18 @@
-SDL_INCLUDE = -I/usr/local/include -I../../Shared/                                                              
+# SDL_INCLUDE = -I/usr/local/include -I../../Shared/                                                              
+# 
+# SOURCES=$(wildcard *.cpp) $(wildcard ../../Shared/*.cpp) $(wildcard ../Computer.cpp)
+# DEPS=$(patsubst %.cpp, %.dep, $(SOURCES))
+# OBJ=$(patsubst %.cpp, %.o, $(SOURCES))
+SDL_INCLUDE = -I/usr/local/include -I../Shared/
+LDFLAGS = $(LIB)  -I../Shared/ -Wall -pthread
+
+CXX=g++ -g
+CXXFLAGS=-Wall -c -std=c++11 $(SDL_INCLUDE)
+SDL_INCLUDE = -I/usr/local/include -I../Shared/                                                              
 
 SOURCES=$(wildcard *.cpp) $(wildcard ../../Shared/*.cpp) $(wildcard ../Computer.cpp)
 DEPS=$(patsubst %.cpp, %.dep, $(SOURCES))
 OBJ=$(patsubst %.cpp, %.o, $(SOURCES))
-
 
 TestComputer: $(OBJ)
 	$(CXX) $(LDFLAGS) -o $@ $^
